fix: CON-373 search icons alignment and results counter font

--- a/views/scss/inc/_action-bars.scss
+++ b/views/scss/inc/_action-bars.scss
@@ -69,11 +69,12 @@
             .icon-ul {
                 cursor: pointer;
                 background: transparent;
-                height: 21px;
+                height: 19px;
+                margin: 1px 0;
                 border: 1px dashed transparent;
-                vertical-align: middle;
                 &::before {
                     color: $darkBar;
+                    vertical-align: top;
                 }
             }
 
@@ -115,7 +116,9 @@
                     color: $darkBar;
                     margin-left: 5px;
                     display: inline;
-                    vertical-align: middle;
+                    vertical-align: top;
+                    line-height: 14px;
+                    font-family: $regularFont;
                 }
             }
         }
